--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-styled-components": "^2.0.4",
     "gatsby-plugin-typography": "^1.7.10",
-    "styled-components": "^2.3.0"
+    "react-icons": "^2.2.7",
+    "styled-components": "^2.3.0",
+    "typography-theme-fairy-gates": "^0.15.11"
   },
   "keywords": [
     "gatsby"
